# neopos2

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Pos.hpp.90CD1DA1D4F11EF6.idx  builder.cpp.DC60F6D4532F2F08.idx  builder.hpp.63D8DCA59E6C7E64.idx  columns.hpp.2C4A0B97B5E4B1DD.idx  config.cpp.BF5496E85F1B8A67.idx  main.cpp.6300C1A05FDC83E7.idx  point.cpp.1C56071B17944A22.idx  producto.cpp.24E445B923C68D54.idx  proveedor.cpp.4C6DB8B4F733D3EF.idx  sqlite.cpp.D78EDD6BEF6B6495.idx  sqlite.hpp.09371958BCC2F7C3.idx  venta.cpp.8A06A97021408618.idx
include/: Bienvenida.hpp  MainWindow.hpp  Pos.hpp  builder.hpp  sqlite.hpp
recursos/: mainpos.cmb  mainpos.cmb.db
src/: Bienvenida.hpp  Pos.hpp  builder.cpp  builder.hpp  columns.hpp  config.cpp  dbase.db  main  main.cpp  point.cpp  producto.cpp  proveedor.cpp  sqlite.cpp  sqlite.hpp  tempo.txt  venta.cpp
test/: CMakeLists.txt  bienvenida.ui  blue.blp  mainpos.ui  neopos.cmb
